Fix scrollbar jumping

--- a/css/less/main.less
+++ b/css/less/main.less
@@ -32,7 +32,8 @@ html, body {
 
 html {
 	min-height:100%;
-
+	overflow-y:scroll;
+	overflow-x:hidden;
 }
 
 body {
@@ -45,7 +46,6 @@ body {
 	font-family:"Roboto";
 	font-weight:300;
 	font-size:120%;
-	overflow-x:hidden;
 	padding-top:110px;
 	padding-bottom:50px;
 	@media screen and (max-width: @breakpoint-1) {
@@ -172,11 +172,11 @@ a {
 }
 
 .view-animate-enter {
-	
+
 }
 
 .view-animate-enter-active {
-	
+
 }
 
 .view-animate-enter-done {
